--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/shrujalshah28/BotHelloWorld#readme",
   "dependencies": {
     "botbuilder": "^3.4.4",
+    "dotenv": "^2.0.0",
     "restify": "^4.3.0"
   }
 }
